[package]
name = "deployer"
version = "0.0.1"
authors = ["Brian J Brennan <brianloveswords@gmail.com>"]

[dependencies]
iron = "*"
openssl = "*"
toml = "*"
rustc-serialize = "*"
regex = "*"
uuid = "*"
tempdir = "*"
router = "*"
hyper = "*"

[[bin]]
doc = false
name = "deployer"
path = "src/main.rs"
