[package]
name = "hookshot"
version = "1.0.0"
authors = ["Brian J Brennan <brianloveswords@gmail.com>"]

[dependencies]
iron = "*"
openssl = "*"
toml = "*"
rustc-serialize = "*"
regex = "*"
uuid = "*"
tempdir = "*"
router = "*"
hyper = "*"
getopts = "*"

[[bin]]
doc = false
name = "hookshot"
path = "src/main.rs"
