[package]
name = "hookshot"
version = "1.0.0"
authors = ["Brian J Brennan <brianloveswords@gmail.com>"]

[dependencies]
chrono = "*"
getopts = "*"
hyper = "*"
iron = "*"
openssl = "*"
regex = "*"
router = "*"
rustc-serialize = "*"
tempdir = "*"
toml = "*"
users = "*"
uuid = "*"

[[bin]]
doc = false
name = "hookshot"
path = "src/main.rs"
